tests/stmt/tblock_underscore.nim
discard """
  errormsg: "undeclared identifier: '_'"
"""

block _:
  echo "123"
  break _
